# afterlight-server

./: .gitignore  .gitmodules  dataset_dpo_final.jsonl  dataset_sft_final.jsonl  dataset_sft_groq_equipped.jsonl  main_menu_mockup.html  make_jsonl_dpo.py  make_jsonl_sft.py  make_scenario.py  menu_mockup.html  scenarios.json  test_server.py
final_model_dpo_final/: Modelfile
server/: CMakeLists.txt  LlamaManager.cpp  LlamaManager.hpp  main.cpp
